# sol-hello

./: .gitignore  .travis.yml  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/cli-rust/: Cargo.toml
src/cli-rust/src/: main.rs
src/client/: hello_world.ts
src/program-rust/: Cargo.toml
src/program-rust/src/: error.rs  instruction.rs  lib.rs  processor.rs
src/program-rust/tests/: lib.rs
