[package]
name = "cli-rust"
version = "0.1.0"
edition = "2018"

[dependencies]
borsh = "0.9.1"
clap = "2.33.3"
solana-clap-utils = "1.7.11"
solana-cli-config = "1.7.11"
solana-client = "1.7.11"
solana-logger = "1.7.11"
solana-sdk = "1.7.11"
solana-program = "1.7.11"
solana-bpf-helloworld = { path="../program-rust", features = [ "no-entrypoint" ] }